--- a/assets/index.html
+++ b/assets/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <source src="./index.ts" type="text/typescript" />
+    <title>Yuki Bot UI</title>
   </head>
   <body>
-    <!--TODO-->
+    <a href="/auth">Login</a>
   </body>
 </html>
