--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8"/>
     <source src="./index.ts" type="text/typescript"/>
     <title>Yuki Bot UI</title>
+    <style>
+        html, body {
+            background-color: #333;
+            color: whitesmoke;
+        }
+    </style>
 </head>
 <body>
 <a href="/auth">Login</a>
