fix fox greets on first message
added functions for each fox animation, durations not tested

--- a/public/fox.html
+++ b/public/fox.html
@@ -17,10 +17,12 @@
             position: relative;
         }
 
+        /* TODO fix text wrap */
         #speech_bubble {
             padding: 5px;
             font-family: Arial, sans-serif;
             font-size: 1.5rem;
+            text-wrap: normal;
             position: absolute;
             right: 50px;
             top: 20%;
@@ -64,6 +66,8 @@
     <span id="speech_bubble"></span>
 </div>
 <script src="assets/script/fox.js"></script>
+<!--
 <button onclick="greet('Numberless Liquidators')">TEST GREETING</button>
+-->
 </body>
 </html>
