added attack command
ignore commands for fox passive
tuned fox animation timings
setAnimation returns success boolean

--- a/public/fox.html
+++ b/public/fox.html
@@ -66,8 +66,12 @@
     <span id="speech_bubble"></span>
 </div>
 <script src="assets/script/fox.js"></script>
-<!--
+
 <button onclick="greet('Numberless Liquidators')">TEST GREETING</button>
--->
+<button onclick="attack()">TEST ATTACK</button>
+<button onclick="idle()">TEST IDLE</button>
+<button onclick="eat()">TEST EAT</button>
+<button onclick="dance()">TEST DANCE</button>
+
 </body>
 </html>
