refactor fox animation using canvas and spritesheets

--- a/public/fox.html
+++ b/public/fox.html
@@ -62,10 +62,11 @@
 </head>
 <body>
 <div id="fox_house">
-    <img id="fox" src="assets/images/fox/fox_orange_idle.gif" alt="FOX"/>
+    <canvas id="fox_canvas" width="300" height="300"></canvas>
     <span id="speech_bubble"></span>
 </div>
-<script src="assets/script/fox.js"></script>
+<script src="assets/script/animation.js"></script>
+<script src="assets/script/websocket.js"></script>
 
 <!--
 <button onclick="greet('Numberless Liquidators')">TEST GREETING</button>
