--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <title>Yuki Bot UI</title>
-    <style>
-        html, body {
-            background-color: #333;
-            color: whitesmoke;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
+
 <body>
-<a href="/auth">Login</a>
-<a href="/fox">Fox</a>
+    <a href="/auth">Login</a>
+    <a href="/fox">Fox</a>
 </body>
+
 </html>
