added basic styling and content to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,14 @@
 </head>
 
 <body>
-    <a href="/auth">Login</a>
-    <a href="/fox">Fox</a>
+    <h1>Yuki Bot</h1>
+    <p>
+        welcome to yuki bot
+    </p>
+    <div class="features">
+        <a href="/auth">Login</a>
+        <a href="/fox">Fox</a>
+    </div>
 </body>
 
 </html>
