bug: forgot speech bubble wrapper div

--- a/public/fox.html
+++ b/public/fox.html
@@ -10,7 +10,9 @@
 <body>
     <div id="fox_house">
         <canvas id="fox_canvas" width="300" height="300"></canvas>
-        <span id="speech_bubble"></span>
+        <div class="outer">
+            <span id="speech_bubble"></span>
+        </div>
     </div>
     <script src="assets/script/animation.js"></script>
     <script src="assets/script/websocket.js"></script>
