--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <div class="features">
         <a href="/auth">Login</a>
         <a href="/fox">Fox</a>
+        <a href="/leaderboard">Leaderboard</a>
     </div>
 </body>
 
