--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -2,45 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Yuki Fox</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/leaderboard.css">
+  <meta charset="UTF-8">
+  <title>Yuki Fox</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/leaderboard.css">
 </head>
 
 <body>
-<ul id="leaderboard"></ul>
+  <ul id="leaderboard"></ul>
 
-<script>
-  const ul = document.getElementById("leaderboard")
-  getBoard()
+  <script>
+    const ul = document.getElementById("leaderboard")
+    //getBoard()
 
-  function draw(list) {
-    console.log("drawing leaderboard")
-    ul.innerHTML = ""
-    list.forEach(([k, v], i) => {
-      const li = document.createElement("li")
-      const rank = document.createElement("span")
-      const name = document.createElement("span")
-      const wallet = document.createElement("span")
-      rank.innerText = `${i + 1}:`
-      name.innerText = k
-      wallet.innerText = v.toLocaleString()
-      li.append(rank, name, wallet)
-      ul.append(li)
-    })
-  }
+    function draw(list) {
+      console.log("drawing leaderboard")
+      ul.innerHTML = ""
+      list.forEach(([k, v], i) => {
+        const li = document.createElement("li")
+        const rank = document.createElement("span")
+        const name = document.createElement("span")
+        const wallet = document.createElement("span")
+        rank.innerText = `${i + 1}:`
+        name.innerText = k
+        wallet.innerText = v.toLocaleString()
+        li.append(rank, name, wallet)
+        ul.append(li)
+      })
+    }
 
-  async function getBoard() {
-    console.log("fetching leaderboard")
-    const resp = await fetch("/api/leaderboard")
-    /** @type {[name: string, wallet: number]}[]} */
-    const list = await resp.json()
-    console.log(list)
-    draw(list)
-    setTimeout(() => getBoard(), 20 * 1000)
-  }
-</script>
+    async function getBoard() {
+      console.log("fetching leaderboard")
+      const resp = await fetch("/api/leaderboard")
+      /** @type {[name: string, wallet: number]}[]} */
+      const list = await resp.json()
+      console.log(list)
+      draw(list)
+      setTimeout(() => getBoard(), 20 * 1000)
+    }
+  </script>
 </body>
 
 </html>
