styled leaderboard more consistent styling with rest of site and added hover effects

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+  <!-- <a class="backlink">go home</a> -->
+  <h1>Leaderboard</h1>
+  <p>
+    where do you stand?
+  </p>
   <ul id="leaderboard"></ul>
 
   <script>
