--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -18,7 +18,7 @@
 
   <script>
     const ul = document.getElementById("leaderboard")
-    //getBoard()
+    getBoard()
 
     function draw(list) {
       console.log("drawing leaderboard")
