added alert types and polling loop to alert page

--- a/public/fox.html
+++ b/public/fox.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <script src="assets/script/animation.js"></script>
-    <script src="assets/script/websocket.js"></script>
+    <script src="assets/script/foxWebsocket.js"></script>
 
     <!--
 <button onclick="greet('Numberless Liquidators')">TEST GREETING</button>
