added alerts page to router and clear alert function

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <a href="/auth">Login</a>
         <a href="/fox">Fox</a>
         <a href="/leaderboard">Leaderboard</a>
+        <a href="/alerts">Alerts</a>
     </div>
 </body>
 
