chore: update prettier config and script
chore: format all files

--- a/public/fox.html
+++ b/public/fox.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Yuki Fox</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/fox.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="/assets/css/fox.css" />
+  </head>
 
-<body>
+  <body>
     <div id="fox_house">
-        <canvas id="fox_canvas" width="300" height="300"></canvas>
-        <div class="outer">
-            <span id="speech_bubble"></span>
-        </div>
+      <canvas id="fox_canvas" width="300" height="300"></canvas>
+      <div class="outer">
+        <span id="speech_bubble"></span>
+      </div>
     </div>
     <script src="assets/script/animation.js"></script>
     <script src="assets/script/websocket.js"></script>
@@ -24,6 +23,5 @@
 <button onclick="eat()">TEST EAT</button>
 <button onclick="dance()">TEST DANCE</button>
 -->
-</body>
-
+  </body>
 </html>
