--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>Yuki Bot UI</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  </head>
 
-<body>
-    <h1>Yuki <br /> Bot</h1>
-    <p>
-        welcome to yuki bot
-    </p>
+  <body>
+    <h1>
+      Yuki <br />
+      Bot
+    </h1>
+    <p>welcome to yuki bot</p>
     <div class="features">
-        <a href="/auth">Login</a>
-        <a href="/fox">Fox</a>
-        <a href="/leaderboard">Leaderboard</a>
+      <a href="/auth">Login</a>
+      <a href="/fox">Fox</a>
+      <a href="/leaderboard">Leaderboard</a>
     </div>
-</body>
-
+  </body>
 </html>
