--- a/public/fox.html
+++ b/public/fox.html
@@ -9,19 +9,11 @@
   <body>
     <div id="fox_house">
       <canvas id="fox_canvas" width="300" height="300"></canvas>
-      <div class="outer">
-        <span id="speech_bubble"></span>
+      <div id="speech_bubble">
+        <span id="speech_span"></span>
       </div>
     </div>
     <script src="assets/script/animation.js"></script>
     <script src="assets/script/websocket.js"></script>
-
-    <!--
-<button onclick="greet('Numberless Liquidators')">TEST GREETING</button>
-<button onclick="attack()">TEST ATTACK</button>
-<button onclick="idle()">TEST IDLE</button>
-<button onclick="eat()">TEST EAT</button>
-<button onclick="dance()">TEST DANCE</button>
--->
   </body>
 </html>
