--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -35,10 +35,10 @@
       async function getBoard() {
         console.log("fetching leaderboard")
         const resp = await fetch("/api/leaderboard")
-        /** @type {[name: string, wallet: number]}[]} */
-        const list = await resp.json()
-        console.log(list)
-        draw(list)
+        /** @type {{ payload: [name: string, wallet: number][] }} */
+        const packet = await resp.json()
+        console.log(packet)
+        draw(packet.payload)
         setTimeout(() => getBoard(), 20 * 1000)
       }
     </script>
