added audio clips to alerts
added sound prop to Alert type
fixed bug with randFromRange rounding
refactor alertHistory to act as singleton getter

--- a/public/alerts.html
+++ b/public/alerts.html
@@ -16,6 +16,7 @@
         <h1>Numberless Liquidators</h1>
       </section>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <script src="assets/script/alerts.js"></script>
   </body>
 </html>
