fix speech bubble growth characteristics
more realistic placement and speech bubble growth

--- a/public/fox.html
+++ b/public/fox.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Yuki Fox</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/fox.css" />
-  </head>
 
-  <body>
-    <div id="fox_house">
-      <canvas id="fox_canvas" width="300" height="300"></canvas>
-      <div id="speech_bubble">
-        <span id="speech_span"></span>
+<head>
+  <meta charset="UTF-8" />
+  <title>Yuki Fox</title>
+  <link rel="stylesheet" type="text/css" href="/assets/css/fox.css" />
+</head>
+
+<body>
+  <div id="fox_house">
+    <canvas id="fox_canvas" width="300" height="300"></canvas>
+    <div id="speech_bubble_container">
+      <div id="speech_span">
+        <span id="speech_bubble"></span>
       </div>
     </div>
-    <script src="assets/script/animation.js"></script>
-    <script src="assets/script/foxWebsocket.js"></script>
-  </body>
+  </div>
+  <script src="assets/script/animation.js"></script>
+  <script src="assets/script/foxWebsocket.js"></script>
+</body>
+
 </html>
